# rustnet

./: Cargo.toml  TODO.MD  dodi.html  fitgirl.html
src/: lib.rs  main.rs  proxys.rs  response.rs  torrent.rs
src/handlers/: dodi.rs  fitgirl.rs  galaxy.rs  mod.rs  rarbg.rs  x1337.rs
src/tests/: rarbg_test.rs
