[package]
name = "rustnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web    = "4.2.1"
serde        = { version = "1.0.146", features = ["derive"] }
select       = "0.6.0"
derivative   = "2.2.0"
serde_json   = "1.0.87"
actix-rt     = "2.7.0"
env_logger   = "0.10.0"
hyper-rustls = "0.23.2"
hyper = "0.14.17"
native-tls = "0.2.8"
rustls = "0.20.8"
lazy_static = "1.4.0"
reqwest = "0.11.13"